--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 .App {
   text-align: left;
-}
-
-.App-header {
-  background-color: #d2dcee;
+  background-color: #e6ebf4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,8 +9,4 @@
   font-size: calc(10px + 2vmin);
   color: #282c34;
   padding: 20px 40px;
-}
-
-h1 {
-  margin: 10px 0;
 }
